--- a/wishlist.html
+++ b/wishlist.html
@@ -272,19 +272,18 @@
 
 
       <!-- Information -->
-      <div class="col-md-3">
-      <h5>Information</h5>
+     <div class="col-md-3">
+       <h5>Information</h5>
         <ul class="footer-links">
-          <li><a href="#">Checkout</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Terms & Condition</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Refund & Return Policy</a></li>
-          <li><a href="#">Contact Us</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li><a href="shop.html">Shop</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
-      </div>
+      </div
 
-      <!-- Contact Us -->
+      <!-- Contact Us  -->
       <div class="col-md-3">
         <h5>Contact Us</h5>
         <ul class="footer-links">
